# Serin

./: .bandit  .env.example  .gitignore  .secrets.baseline  .setup_state  AGENTS.md  CHANGES_DEFERRED.md  CODING_GUIDELINES.md  MIGRATION_MAP.md  MOVED.md  PROGRESS.md  README.md  SERIN_MASTER_REFACTOR_PROMPT.md  SERIN_VISION.md  active_search.py  audio_config_manager.py  background_processor.py  bot_personality.py  check_qdrant_methods.py  config.py  conversation_analyzer.py  conversation_context_builder.py  conversational_fillers.py  correction_handler.py  cosmic-ray.conf  database_protector.py  debug_backfilling_detailed.py  debug_logger.py  dev.py  discord_bot.py  enhanced_api_routes.py  enhanced_memory_context.py  enhanced_memory_retrieval.py  enhanced_message_manager.py  final_backfilling_verification.py  gpu.py  hot_reloader.py  logger_config.py  long_message_handler.py  memory_diagnostic_tool.py  (+51 more)
.kilocode/: mcp.json
.mimocode/plans/: 1782846932475-playful-sailor.md  1782929841656-jolly-moon.md
.pi/: bingos.json
.semgrep/rules/: no-bare-except.yaml  no-deprecated-imports.yaml  no-direct-env-access.yaml  no-eval.yaml  no-stale-kwargs.yaml
bot_data/qdrant_data/: raft_state.json
control_panel/: dashboard.html
control_panel/static/: enhanced_control_panel.js  index.html
dat/bot_data/: bot_data.db  bot_data.db-shm  bot_data.db-wal
dat/bot_data/chroma_data/: chroma.sqlite3
docs/: ARCHITECTURE.md  ENGINEERING_STANDARDS.md  LOGGING.md  THE_LAW.md  deployment_checklist.md  implementation_guide.md  implementation_summary.md  improvements_summary.md  qdrant_migration_plan.md  qdrant_migration_setup.sh  start_guide.md  todo.md  troubleshooting_guide.md
models/: __init__.py  adapter.py  factory.py  interface.py  lm_studio.py  lm_studio.py.bak  lm_studio_connector.py  logger_config.py  model_adapter.py  model_factory.py  model_interface.py  sglang.py  sglang.py.bak  sglang_connector.py  vllm.py  vllm.py.bak  vllm_connector.py
p2_gateway/: __init__.py
p2_gateway/1_discord/: 1_bot_entry.py  2_mention_translator.py  2a_message_crawler.py  3_passive_monitor.py  4_voice_tracker.py
p2_gateway/2_voice/: 1_tts_engine.py  1a_voice_profiles.py  1b_voice_file_manager.py  2_rust_voice_bridge.py  2a_voice_listener.py  3_audio_processor.py  3a_whisper_transcriber.py  3b_voice_output_manager.py
p2_gateway/5_adapter/: 1_lm_studio_connector.py  2_sglang_connector.py  3_vllm_connector.py
p5_ops/: 3_duplicate_finder.py  4_database_protector.py  5_sync_monitor.py  __init__.py
p5_ops/1_control_panel/: 1_routes.py  2_server.py  __init__.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/memories/: config.json
scripts/: check.sh  complete_refactor.py  find_duplicate_files.py  fix_f841.py  fix_structure.py  fix_typing_imports.py  setup.sh
scripts/law/: check_all.sh  check_imports.py  check_structure.py
scripts/undef-var-scanner/: Cargo.toml
scripts/undef-var-scanner/src/: main.rs
serin/: __main__.py  _di.py  active_search.py  logger.py  logger.pyi  visual_memory_system.py
serin/config/: config.py  debug_logger.py
serin/control_panel/: routes.py  server.py
serin/core/: config.py  logger.py
serin/d1_1_pipeline_flow/act/: stages_base.py
serin/d1_1_pipeline_flow/perceive/: active_search.py  bot_personality.py  conversation_analyzer.py  topic_fatigue.py
serin/d1_1_pipeline_flow/remember/: qdrant.py  temporal.py  (+1 more)
serin/d1_2_gateway_io/: _di.py
serin/d1_3_state_core/: bm25_index.py  logger.py  memory_store.py  message_context.py  thinking_filter.py
serin/d1_4_config_base/: config.py  debug_logger.py
serin/d1_5_ops_tooling/: background.py  hot_reloader.py  passive_monitor.py  tts_voice_manager.py
serin/memory/: __init__.py  beliefs.py  context.py  evidence.py  qdrant.py  retrieval.py  store.py  sync_monitor.py  temporal.py
serin/messaging/: __init__.py  context.py  context_builder.py  correction_handler.py  crawler.py  crawler.py.bak  fillers.py  long_message.py  manager.py  mention_translator.py  pipeline.py  response_controller.py  response_generator.py  stages.py  typos.py
serin/models/: __init__.py  factory.py
serin/ops/: background.py  database_protector.py  db_backup.py  hot_reloader.py  passive_monitor.py  tts_voice_manager.py
serin/personality/: __init__.py  bot_personality.py  conversation_analyzer.py  topic_fatigue.py
serin/state/: db_protect.py  evidence_store.py  memory_qdrant.py  memory_store.py  mention_translator.py  thinking_filter.py  voice_decider.py
serin/utils/: background.py  database_protector.py  debug_logger.py  passive_monitor.py  passive_monitor.py.bak  thinking_filter.py
serin_core/: Cargo.toml
serin_core/src/: lib.rs
temp_voice_test/: Cargo.toml  temp_voice_bridge.py
temp_voice_test/src/: main.rs
test/: test.py  test_control_panel.py  test_memory_dedup.py  test_vllm.py
tests/: conftest.py  memory_testing_framework.py  simple_test.py  test_active_search_init.py  test_active_search_loop.py  test_all.py  test_database_protection.py  test_datetime_fixes.py  test_di_contracts.py  test_fix_fts.py  test_human_responses.py  test_qdrant_migration.py  test_runtime_contracts.py  test_static_analysis.py  test_vision.py  verify_active_search.py  verify_active_search_live.py
tests/integration/: test_bridge.py  test_discord_bot.py
tests/memory/: test_qdrant.py
tests/messaging/: test_pipeline.py  test_processor.py
tests/voice/: test_processor.py
tts/: tts_engine.py  tts_engine.py.bak
tts/voices/: README.md
utils/: llama_connector.py
voice/: __init__.py  audio_stream_processor.py  behavior.py  bridge.py  decider.py  listener.py  output.py  pipeline.py  processor.py  processor.py.bak  profiles.py  rust_voice_bridge.py  tracker.py  tracker.py.bak  transcriber.py  voice_action_decider.py  voice_behavior_manager.py  voice_listener.py  voice_memory_pipeline.py  voice_output_manager.py  voice_output_queue.py  voice_profiles.py  voice_tracker.py  whisper_transcriber.py
voice/rust_receiver/: Cargo.toml
voice/rust_receiver/src/: main.rs  minimal_test.rs
voice/temp_voice_test/: temp_voice_bridge.py
(+248 files in other folders)
