[project]
name = "serin-ai"
version = "0.2.0"
description = "Advanced Discord AI bot with Qdrant memory system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "aiohttp>=3.13.2",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    # Qdrant vector database
    "qdrant-client>=1.12.0",
    # ChromaDB (legacy fallback)
    "chromadb>=1.3.5",
    # Embedding models
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    # Discord
    "py-cord[voice]>=2.6.1",
    # AI/ML
    "openai>=2.8.1",
    "vadersentiment>=3.3.2",
    # Utilities
    "dotenv>=0.9.9",
    "typing>=3.10.0.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.0",
    # Audio processing
    "faster-whisper>=1.2.1",
    # Development dependencies (optional)
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pillow>=12.0.0",
    "coqui-tts[all]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
