[project]
name = "serin-ai"
version = "0.2.0"
description = "Advanced Discord AI bot with Qdrant memory system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "aiohttp>=3.13.2",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    # Qdrant vector database
    "qdrant-client>=1.18.0",
    # Embedding models (CPU-only torch — the LLM runs in llama-swap externally)
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    # Discord
    "py-cord[voice]>=2.6.1",
    "audioop-lts>=0.2.0; python_version>='3.13'",  # audioop removed in 3.13
    # AI/ML
    "openai>=2.8.1",
    "vadersentiment>=3.3.2",
    # Utilities
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.0",
    # Audio processing
    "faster-whisper>=1.2.1",
    # Dev tools (lightweight)
    "pillow>=12.0.0",
    "einops>=0.8.1",
    "edge-tts>=7.2.8",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
voice = [
    "coqui-tts>=0.27.0",
]
memory = [
    "chromadb>=1.3.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "watchfiles>=1.0.0",
    "maturin>=1.10.0",        # Build serin_core PyO3 module
]

[project.scripts]
dev = "dev:main"

# Use CPU-only PyTorch — the LLM runs in llama-swap, not in this process.
# Saves ~3GB of CUDA downloads.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25",
]
