[package]
name = "temp_voice_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice_receiver"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "voice", "cache", "model"] }
songbird = { version = "0.6.0", features = ["driver", "gateway", "serenity", "receive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
dashmap = "6"

[profile.release]
opt-level = 2
lto = true
